# slm-multi-agent-eval

./: .gitignore  LANGCHAIN_INTEGRATION.md  README.md  cmd_example.py  conftest.py  dataset.ipynb  hf_token.env  main.py  multiAgent.py  pyproject.toml  test_python_tool.py
examples/: cmd_example.py
logs/: experiment_mapping.json
logs/eval_2025-10-22_18-14-21/: eval_logs.json  results.json
logs/eval_2025-10-26_01-26-31/: eval_logs.json  results.json
logs/eval_2025-10-27_20-54-08/: eval_logs.json  results.json
logs/eval_2025-10-27_20-57-59/: eval_logs.json  results.json
logs/eval_2025-11-06_16-50-26/: eval_logs.json  results.json
logs/eval_2025-11-06_17-17-45/: eval_logs.json  results.json
logs/eval_2025-11-06_17-58-00/: eval_logs.json  results.json
logs/eval_2025-11-06_18-02-46/: eval_logs.json  results.json
logs/eval_2025-11-11_17-50-32/: eval_logs.json
logs/eval_2025-11-11_18-04-25/: eval_logs.json  results.json
logs/eval_2025-11-11_18-20-21/: eval_logs.json  results.json
logs/eval_2025-11-11_18-39-11/: eval_logs.json  results.json
logs/eval_2025-11-11_18-47-05/: eval_logs.json  results.json
logs/eval_2025-11-11_19-10-23/: eval_logs.json  results.json
notebooks/: analysis (1).ipynb  analysis.ipynb  dataset (1).ipynb  dataset.ipynb
scr/: main.py
scr/agents/: base_agent.py  (+5 more)
scripts/: analysis.py  setup_browser.sh
test/: test_agent_tool_categories.py  test_agent_with_tool.py  test_browser_manager.py  test_browser_tools.py  test_cmd.py  test_cost_tracker.py  test_debug_tool_calling.py  test_langchain_adapter.py  test_tool_registry.py
(+101 files in other folders)
